# Statistical-Modeling

./: .gitignore  CITATIONS.md  README.md  pyproject.toml  requirements.txt
configs/: south_china_sea.yaml  toy.yaml
docs/: external_sota_baselines.md  final_submission_checklist.md  paper_style_reference_notes.md  paper_upgrade_audit.md
docs/superpowers/plans/: 2026-05-03-statistical-modeling-paper.md  (+2 more)
paper/: asset_manifest.json  main.tex  method_stub.md  references.bib
paper/tables/: annual_driver_regression_table.tex  data_summary_table.tex  driver_model_summary_table.tex  driver_robustness_table.tex  heat_risk_index_table.tex  hri_weight_sensitivity_table.tex  missing_month_sensitivity_table.tex  monthly_driver_best_lag_table.tex  monthly_driver_regression_table.tex  robust_trend_table.tex  subregion_summary_table.tex  threshold_sensitivity_table.tex  trend_summary_table.tex
scripts/: 00_make_toy_data.py  01_download_noaa_crw.py  02_build_weekly_dataset.py  03_train.py  04_evaluate.py  05_baselines.py  06_make_figures.py  07_export_openstl_npy.py  08_setup_external_repos.sh  20_prepare_ostia_scs.py  21_download_external_drivers.py  30_build_monthly_sst_products.py  31_make_monthly_sst_figures.py  32_build_daily_mhw_products.py  33_make_mhw_figures.py  34_build_driver_analysis.py  35_build_word_paper.py  36_build_subregion_analysis.py  37_build_robustness_analysis.py  38_build_heat_risk_index.py  39_make_paper_tables_figures.py
src/reefcastnet/: config.py  dataset.py  erddap.py  losses.py  metrics.py  models.py  preprocessing.py  thermal.py  train_utils.py
