[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reefcastnet"
version = "0.1.0"
description = "ReefCastNet: reef-aware SST anomaly forecasting and coral bleaching heat-stress evaluation"
requires-python = ">=3.10"
authors = [{name = "ReefCastNet Team"}]

[tool.setuptools.packages.find]
where = ["src"]
